package seedu.fitchasers.tagger;

//@@author Kart04
/**
 * Represents the type or category of a workout modality.
 * <p>
 * A modality defines the general nature of an exercise, such as
 * cardiovascular training or strength training.
 */
public enum Modality {
    CARDIO,
    STRENGTH
}
