package seedu.fitchasers.tagger;

//@@author Kart04
/**
 * Represents the major muscle groups targeted by workouts.
 * <p>
 * Each constant corresponds to a specific region of the body
 * that can be trained through different exercises.
 */
public enum MuscleGroup {
    LEGS,
    POSTERIOR_CHAIN,
    CHEST,
    BACK,
    SHOULDERS,
    ARMS,
    CORE
}
