@startuml
title FitChasers Tagging System - Class Diagram

skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam ArrowColor #444
skinparam ClassBorderColor #222
skinparam ClassBackgroundColor #FAFAFA

hide empty members
hide circle

' ==========================
' PACKAGES
' ==========================

  class WorkoutManager {
    -workouts: ArrayList<Workout>
    -currentWorkout: Workout
    -tagger: Tagger
    -fileHandler: FileHandler
    -ui: UI
    -currentLoadedMonth: YearMonth
    --
    +addWorkout(command: String): void
    +overrideWorkoutTags(workout: Workout, newTag: String): void
    +deleteParser(argumentStr: String): void
  }

  class Workout {
    -workoutName: String
    -manualTags: Set<String>
    -autoTags: Set<String>
    --
    +getAllTags(): Set<String>
    +setManualTags(tags: Set<String>): void
    +setAutoTags(tags: Set<String>): void
  }

  class Tagger <<interface>> {
    +suggest(w: Workout): Set<String>
  }

  class DefaultTagger {
    -modalityKeywords: EnumMap<Modality, Set<String>>
    -muscleKeywords: EnumMap<MuscleGroup, Set<String>>
    --
    +DefaultTagger()
    +suggest(w: Workout): Set<String>
    +addModalityKeyword(m: Modality, kw: String): void
    +addMuscleKeyword(mg: MuscleGroup, kw: String): void
  }

  enum Modality {
    CARDIO
    STRENGTH
  }

  enum MuscleGroup {
    LEGS
    POSTERIOR_CHAIN
    CHEST
    BACK
    SHOULDERS
    ARMS
    CORE
  }

' ==========================
' RELATIONSHIPS
' ==========================

WorkoutManager o-- "0..*" Workout
WorkoutManager --> "1" Tagger

DefaultTagger ..|> Tagger

Workout ..> Modality
Workout ..> MuscleGroup
DefaultTagger ..> Modality
DefaultTagger ..> MuscleGroup

@enduml